--- a/Ocean_cms/WebRoot/styles/main.css
+++ b/Ocean_cms/WebRoot/styles/main.css
@@ -1,6 +1,6 @@
 @import url("base.css");
 @import url("edit.css");
 @import url("header.css");
-@import url("nav.css);
-@import url("content.css);
-@import url("footer.css);
+@import url("nav.css");
+@import url("content.css");
+@import url("footer.css");
