--- a/Ocean_cms/WebRoot/styles/edit.css
+++ b/Ocean_cms/WebRoot/styles/edit.css
@@ -2,6 +2,7 @@
 	width:1024px;
 	height:80px;
 	border:1px solid #AAAAAA;
-	margin:10px auto;
-	background:#3B5998;
+	margin-left:auto;
+	margin-right:auto;
+	background:#6699CC;
 }
