--- a/Ocean_cms/WebRoot/styles/edit.css
+++ b/Ocean_cms/WebRoot/styles/edit.css
@@ -10,7 +10,7 @@
 }
 
 #edit_nav_menu {
-	width: 500px;
+	width: 400px;
 	float: left;
 	margin-left: 20px;
 }
@@ -25,5 +25,24 @@
 }
 
 #edit_nav_menu li a {
+	color: white;
+}
+
+#edit_nav_usertool {
+	float: right;
+	width: 500px;
+	margin-right: 10px;
+}
+
+#edit_nav_usertool li {
+	float: right;
+	display: block;
+	width: 50px;
+	margin-right: 4px;
+	overflow: hidden;
+	cursor: pointer;
+}
+
+#edit_nav_usertool a {
 	color: white;
 }
