--- a/Ocean_cms/WebRoot/styles/edit.css
+++ b/Ocean_cms/WebRoot/styles/edit.css
@@ -10,6 +10,7 @@
 }
 
 #edit_nav_menu {
+	display:block;
 	width: 400px;
 	float: left;
 	margin-left: 20px;
@@ -29,13 +30,12 @@
 }
 
 #edit_nav_usertool {
-	float: right;
-	width: 500px;
-	margin-right: 10px;
+	display:block;
+	margin-left: 850px;
 }
 
 #edit_nav_usertool li {
-	float: right;
+	float:left;
 	display: block;
 	width: 50px;
 	margin-right: 4px;
